# genkeycsr

./: .gitignore  CHANGELOG  README.md  config.py  requirements.txt  run.py  setup.cfg  wsgi.py
.github/workflows/: codeql-analysis.yml
docs/: genkeycsr.conf  sample_config.py  sample_wsgi.py
gen_keycsr/: __init__.py
gen_keycsr/libs/: frmattributes.py  genkeycsr.py
gen_keycsr/static/css/: colors.css  grid.css  position.css  text.css
gen_keycsr/static/fonts/: example.html  ff-clan.css
gen_keycsr/static/images/: 128x128
gen_keycsr/static/images/illustration-lock-icon/: 5832.eps
gen_keycsr/static/js/: api.js
gen_keycsr/templates/: base.html  form_errors.html  index.html  instructions.html
genkeycsr/: __init__.py
genkeycsr/libs/: frmattributes.py
genkeycsr/static/css/: colors.css  grid.css  position.css  text.css
genkeycsr/static/js/: api.js
genkeycsr/templates/: base.html  form_errors.html  index.html  instructions.html
