[metadata]
name = genkeycsr
version = 0.0.1
description = Genkeycsr is a micro flask webpage that helps generating private keys and certificate signing requests.
long_description = file: README.md, LICENSE, CHANGELOG
long_description_content_type = text/markdown

author = Eduardo Ferreira @dudacgf
url =  https://github.com/dudacgf/genkeycsr
project_urls =
    Source Code = https://github.com/dudacgf/genkeycsr
    Documentation = https://github.com/dudacgf/genkeycsr/blob/master/README.md
    Issues = https://github.com/dudacgf/genkeycsr/issues/

license = GPL-3.0-or-later
keywords = python flask certificate-signing-requests csr private-key key criptography
classifiers =
   Development Status :: 1 - Initial Release
   Environment :: Web
   Intended Audience :: End Users/Desktop
   Intended Audience :: Information Technology
   Intended Audience :: System Administrators
   License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
   Natural Language :: English
   Programming Language :: Python
   Topic :: Internet :: Log Analysis
   Topic :: Security

[options]
include_package_data = True
packages = find:
install_requires =
    cryptography>=36.0.0
    Flask>=2.0.2
    Flask-WTF>=1.0.0
    iso3166         2.0.2
    validators>=0.18.2
    Werkzeug>=2.0.2
    WTForms>=3.0.0
python_requires = >=3.9

[options.entry_points]
console_scripts = 
    genkeyscr = genkeycsr:app





